# TinyBL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  TinyBL.ioc  fletcher16.py  generate_test_runner.py  mock_templates.toml  templates.toml
Inc/: config.h
Inc/Application/: main.h
Inc/CRC32/: CRC32.h
Inc/Flash/: Flash.h
Inc/Fletcher16/: Fletcher16.h
Inc/Protocol/: Protocol.h
Inc/Timer/: Timer.h
Inc/TinyBL/: TinyBL.h
Inc/TinyMessage/: TinyMessage.h
Inc/TinySerialize/: TinySerialize.h
Inc/Transport/: Transport.h
Inc/UART/: UART.h
Platform/STM32F103xx/Linker/: STM32F103CBTx_FLASH.ld
Src/Application/: main.c
Src/CRC32/: CRC32.c
Src/Flash/: Flash.c
Src/Fletcher16/: Fletcher16.c
Src/Protocol/: Protocol.c
Src/Timer/: Timer.c
Src/TinyBL/: TinyBL.c
Src/TinyMessage/: TinyMessage.c
Src/TinySerialize/: TinySerialize.c
Src/Transport/: Transport.c
Src/UART/: UART.c
Test/Inc/CRC32/: CRC32Test.h
Test/Inc/Flash/: FlashTest.h
Test/Inc/Fletcher16/: Fletcher16Test.h
Test/Inc/Protocol/: ProtocolTest.h
Test/Inc/Timer/: TimerTest.h
Test/Inc/TinyBL/: TinyBLTest.h
Test/Inc/TinyMessage/: TinyMessageTest.h
Test/Inc/TinySerialize/: TinySerializeTest.h
Test/Inc/Transport/: TransportTest.h
Test/Inc/UART/: UARTTest.h
Test/Inc/UnityConfig/: unity_config.h
Test/Mocks/Inc/Flash/: FlashMock.h
Test/Mocks/Inc/Memory/: MemoryMock.h
Test/Mocks/Inc/Protocol/: ProtocolMock.h
Test/Mocks/Inc/Timer/: TimerMock.h
Test/Mocks/Inc/Transport/: TransportMock.h
Test/Mocks/Inc/UART/: UARTMock.h
Test/Mocks/Src/Flash/: FlashMock.c
Test/Mocks/Src/Memory/: MemoryMock.c
Test/Mocks/Src/Protocol/: ProtocolMock.c
Test/Mocks/Src/Timer/: TimerMock.c
Test/Mocks/Src/Transport/: TransportMock.c
Test/Mocks/Src/UART/: UARTMock.c
Test/Src/: AllTests.c
Test/Src/CRC32/: CRC32Test.c
Test/Src/Flash/: FlashTest.c
Test/Src/Fletcher16/: Fletcher16Test.c
Test/Src/Protocol/: ProtocolTest.c
Test/Src/Timer/: TimerTest.c
Test/Src/TinyBL/: TinyBLTest.c
Test/Src/TinyMessage/: TinyMessageTest.c
Test/Src/TinySerialize/: TinySerializeTest.c
Test/Src/Transport/: TransportTest.c
Test/Src/UART/: UARTTest.c
Test/TestRunners/CRC32/: CRC32TestRunner.c
Test/TestRunners/Flash/: FlashTestRunner.c
Test/TestRunners/Fletcher16/: Fletcher16TestRunner.c
Test/TestRunners/Protocol/: ProtocolTestRunner.c
Test/TestRunners/Timer/: TimerTestRunner.c
Test/TestRunners/TinyBL/: TinyBLTestRunner.c
Test/TestRunners/TinyMessage/: TinyMessageTestRunner.c
Test/TestRunners/TinySerialize/: TinySerializeTestRunner.c
Test/TestRunners/Transport/: TransportTestRunner.c
Test/TestRunners/UART/: UARTTestRunner.c
